--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 									using PYGame module</a></h2>
 									<p></p>
 								</header>
-								<a href="#" class="image main"><img src="images/ping.jpg" alt="" /></a>
+								<a href="#" class="image main"><img src="images/ping.JPG" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/sam7468/Python-Projects/tree/main/Ping-Pong" class="button large">Source Code</a></li>
 								</ul>
@@ -64,7 +64,7 @@
 										<h2><a href="#"> #1 <br />
 										To-Do</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/todo.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/todo.JPG" alt="" /></a>
 									<p>A simple To-Do app with django (SQLite database)</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/sam7468/Python-Projects/tree/main/To-Do%20app" class="button">Source code</a></li>
@@ -76,7 +76,7 @@
 										<h2><a href="#"> #2 <br />
 										Snake</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/anac.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/anac.JPG" alt="" /></a>
 									<p>A Nostalgic retro game. </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/sam7468/Python-Projects/tree/main/Snake%20Game" class="button">Source code</a></li>
@@ -88,7 +88,7 @@
 										<h2><a href="#"> #3 <br />
 										Tic-Tac-Toe</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/tic.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/tic.JPG" alt="" /></a>
 									<p>A fun game to play with bot.</p>
 
 									<ul class="actions special">
@@ -101,7 +101,7 @@
 										<h2><a href="#">#4<br />
 										Rock-Paper-Scissor</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/rock.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/rock.JPG" alt="" /></a>
 									<p>Made with simple conditional statements.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/sam7468/Python-Projects/tree/main/R-P-Scissors" class="button">Source code</a></li>
